--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,21 @@
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
-
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+
 
     </dependencies>
 
